--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "ethers": "^5.7.0",
+    "got": "^12.4.1",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
