--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frencaster-v2",
+  "name": "frencircle",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -19,8 +19,11 @@
     "@types/node": "18.7.16",
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.10",
     "eslint": "8.23.0",
     "eslint-config-next": "12.3.0",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.8.3"
   }
 }
