--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.3.2",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "ethers": "^5.7.0",
+    "framer-motion": "^6.5.1",
     "got": "^12.4.1",
     "next": "12.3.0",
     "react": "18.2.0",
