--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^2.3.2",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@supabase/supabase-js": "^1.35.6",
     "ethers": "^5.7.0",
     "framer-motion": "^6.5.1",
     "got": "^12.4.1",
