--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "got": "^12.4.1",
     "next": "12.3.0",
     "react": "18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.7.16",
     "@types/react": "18.0.18",
+    "@types/react-color": "^3.0.6",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.10",
     "eslint": "8.23.0",
