--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@chakra-ui/react": "^2.3.2",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
-    "@supabase/supabase-js": "^1.35.6",
     "ethers": "^5.7.0",
     "framer-motion": "^6.5.1",
     "got": "^12.4.1",
+    "html-to-image": "^1.10.8",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-color": "^2.19.3",
@@ -29,9 +29,6 @@
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.10",
     "eslint": "8.23.0",
-    "eslint-config-next": "12.3.0",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8",
-    "typescript": "4.8.3"
+    "eslint-config-next": "12.3.0"
   }
 }
